<resources>
    <string name="app_name">Messenger App</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="connect_easily_with_your_family_nand_friends_over_countries">Connect easily with your family\nand friends over countries</string>
    <string name="back_button">back button</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="please_confirm_your_country_code_and_enter_nyour_phone_number">Please confirm your country code and enter \nyour phone number</string>
    <string name="flag_icon">flag Icon</string>
    <string name="_62">+92</string>
    <string name="phone_number">Phone Number</string>
    <string name="_continue">Continue</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="backspace">Backspace</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="enter_code">Enter Code</string>
    <string name="we_have_sent_you_an_sms_with_the_code_nto_62_1309_1710_1920">We have sent you an SMS with the code \nto your number</string>
    <string name="resend_code">Resend Code</string>
    <string name="__1">1</string>
    <string name="__7">7</string>
    <string name="first_name_required">First Name (Required)</string>
    <string name="last_name_optional">Last Name (Optional)</string>
    <string name="your_profile">Your Profile</string>
    <string name="profileimg">profileimg</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="online">Online</string>
    <string name="contact_name">Contact Name</string>
    <string name="contacts">Contacts</string>
    <string name="more">More</string>
    <string name="_search">Search</string>
    <string name="_contacts">Contacts</string>
    <string name="search_">Search</string>
    <string name="add_contact">add contact</string>
    <string name="athalia_putri">Athalia Putri</string>
    <string name="good_morning_did_you_sleep_well">Good morning, did you sleep well?</string>
    <string name="today">Today</string>
    <string name="chat_1">1</string>
    <string name="your_story">Your Story</string>
    <string name="verify_code">Verify Code</string>
    <string name="chat">Chat</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="_chat">Chats</string>
</resources>