<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/profile_image_background"
        android:src="@drawable/profile_placeholder"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/athalia_putri"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning_did_you_sleep_well"
            android:textColor="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvUnreadCount"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="@string/chat_1"
            android:textStyle="bold"
            android:textColor="#001569"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</LinearLayout>
