<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/back_button"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number"
            android:fontFamily="@font/mulish_extralight"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/Subtitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_confirm_your_country_code_and_enter_nyour_phone_number"
            android:textStyle="bold"
            android:textSize="14sp"
            android:shadowRadius="4"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowColor="#66000000"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="@id/titleText"
            app:layout_constraintEnd_toEndOf="@id/titleText"
            android:layout_marginTop="16dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPhone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_margin="30dp"
            android:padding="14dp"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_editext_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/Subtitletext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVerify"
            android:textSize="16sp"
            android:text="@string/_continue"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>